# dynamic-cloth-folding

./: .gitignore  .gitmodules  3d_trajectories.py  LICENSE  README-wip.md  README.md  __init__.py  analysis.ipynb  current_policy.mdl  current_policy.pt  install-dependencies.sh  interpolation_analysis.ipynb  just a notebook.ipynb  osc_pseudo.txt  requirements.tx  requirements.txt  setup.py  source.sh  train.py  trajectory_analysis.ipynb
.ipynb_checkpoints/: trajectory_analysis-checkpoint.ipynb
appearance_optimization/: collect_real_images.py  produce_images.py  test_sim_images.py  train_corner_prediction.py  train_sim_corners.py
clothmanip.egg-info/: PKG-INFO  SOURCES.txt
data/: model_params.csv
env/: cloth_env.py  template_renderer.py
examples/: compiled_mujoco_model_no_inertias.xml  compiled_mujoco_model_with_intertias.xml  create_cloth_env.py  example_params.json  example_trajectory.csv  mujoco_template.xml
experiments/: async_async_sac_training.py  async_sac_training.py  benchmark_ddpg_her_sideways.py  cloth_cma_optimization.py  cloth_demo.py  cloth_multi_env_optimization.py  cloth_optimization.py  compiled_mujoco_model.xml  compiled_mujoco_model_no_inertia.xml  compiled_mujoco_model_no_inertias.xml  compiled_mujoco_model_with_inertia.xml  compiled_mujoco_model_with_intertias.xml  ctrl_optimization.py  current_policy.mdl  current_policy_3cm.mdl  device_demo.py  env_debug.py  (+66 more)
osc-controller-binding/: .gitignore  CMakeLists.txt  README.md  setup.py
osc-controller-binding/include/: osc_step.h  pseudo_inversion.h
osc-controller-binding/src/: main.cpp
(+125 files in other folders)
